--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,8 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.38",
+        "phpstan/phpstan": "^1.10",
         "symfony/debug-bundle": "6.3.*",
         "symfony/maker-bundle": "^1.51",
         "symfony/stopwatch": "6.3.*",
